--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cloudinary": "^2.8.0",
     "dayjs": "^1.11.19",
     "framer-motion": "^12.24.12",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.11.0",
