--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "web-vitals": "^2.1.4"
   },
 "scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start"
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
 },
   "eslintConfig": {
     "extends": [
